--- a/style.css
+++ b/style.css
@@ -3,3 +3,59 @@
 *{
   font-family: 'Work Sans', sans-serif;
 }
+.btn-primary{
+  border-radius: 8px;
+  background: #FF900E;
+  color: white;
+  cursor: pointer;
+  padding: 20px 25px;
+  font-size: 1.25rem;
+  border: 0;
+}
+/*header style*/
+header{
+  background-color: rgba(255, 144, 14, 0.10);
+  padding: 50px 240px;
+}
+nav{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+nav > ul {
+  display: flex;
+}
+nav li{
+  list-style: none;
+  margin-left: 50px;
+  font-weight: 500;
+  font-size: 1rem;
+}
+nav li a{
+  text-decoration: none;
+}
+.nav-title{
+  font-weight: 700;
+  font-size: 2.8rem;
+  color:  #131313;
+}
+/*banner style */
+.banner-contant{
+  max-width: 800px;
+  margin: 0 auto;
+  text-align: center;
+}
+.banner-title{
+  width: 860px;
+  color: #131313;
+font-size: 4rem;
+font-weight: 700;
+
+
+}
+.banner-description{
+  color: var(--dark-03, #727272);
+font-size: 1rem;
+font-weight: 400;
+line-height: 26px;
+}
