--- a/style.css
+++ b/style.css
@@ -120,7 +120,64 @@ font-style: normal;
 font-weight: 400;
 line-height: 26px; 
 }
+/*features section style*/
+.features{
+  margin-top: 130px;
+  display: flex;
+  gap: 100px;
+}
+.features .features-card{
+  border-radius: 8px;
+  background: #FFF;
+  box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.06);
+  padding: 30px;
+  margin-bottom: 20px;
+ 
+}
+.features-contant .features-title{
+  color: #131313;
 
+font-size: 2.8rem;
+font-style: normal;
+font-weight: 700;
+
+}
+.features-contant .features-description{
+  color:  #131313;
+
+font-size: 1rem;
+font-weight: 600;
+
+}
+.features .features-title{
+  border-left: 5px solid #FF900E;
+  padding-left: 20px;
+}
+.ten-year{
+  border-radius: 8px;
+  background: #FF900E;
+  width: 340px;
+  padding: 40px;
+  position: relative;
+  bottom: 100px;
+}
+.ten-year h3{
+  color: #FFF;
+  text-align: center;
+font-size: 4rem;
+margin: 0;
+ 
+}
+.ten-year p{
+  color: #FFF;
+font-size: 1.5rem;
+
+text-align: center;
+}
+.feature-img img{
+  height: 90%;
+  margin-left: 100px;
+}
 
 /*facts section*/
 .favts-title{
@@ -132,10 +189,58 @@ font-weight: 700;
 .favts-info {
   color: #727272;
  font-size: 1rem;
- line-height: 26px;
  font-weight: 400;
 
 }
+.facts-container{
+  display: flex;
+  justify-content: space-around;
+}
+.facts-container .card{
+  border-radius: 8px;
+  border: 1px solid #FF900E;
+  text-align: center;
+  padding: 30px;
+ 
+
+ 
+}
+.facts-container .card-title{
+  color: #727272;
+font-size: 1.25rem;
+font-weight: 600;
+
+}
+.facts-container .card-stats{
+  color: #424242;
+text-align: center;
+font-size: 2.8rem;
+font-weight: 600;
+margin-top: 10px;
+margin-bottom: 10px;
+
+
+}
+/*sponsore style*/
+.sponsore-container{
+
+  text-align: center;
+}
+.sponsore-img{
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  margin-top: 50px;
+  gap: 20px;
+}
+
+.sponsore-img img{
+  width: 165px;
+}
+
+
+
+
 
 
  /*tablet or medium device 1*/
@@ -154,20 +259,39 @@ font-weight: 700;
   .banner-title{
     font-size: 2rem;
   }
+  .facts-container{
+    flex-direction: column;
+    gap: 20px;
+  }
   .banner-title{
     flex-direction: column;
+  }
+  .features{
+    flex-direction: column;
+  }
+  .feature-img img{
+    width: 90%;
+    margin: 0;
   }
   /*main section*/
   .teams-container{
     flex-direction: column;
+    overflow-x: hidden;
   }
   .teams-img{
     grid-template-columns: 1fr;
   }
-  .teams-contant{
+  .teams-contant {
     padding-right: 20px;
     padding-left: 20px;
   
+  }
+  .sponsore-img{
+    flex-direction: column;
+  }
+  .ten-year{
+    width: 200px;
+    height: auto;
   }
 
   }
@@ -186,5 +310,9 @@ font-weight: 700;
     .teams-img{
       grid-template-columns: 1fr;
     }
+    .sponsore-img{
+      flex-direction: column;
+    }
+  
 
 }
